--- a/authuser/src/main/resources/application.yaml
+++ b/authuser/src/main/resources/application.yaml
@@ -6,7 +6,7 @@ server:
 master:
   auth:
     jwtSecret: B&E)H@McQfTjWnZr4u7w!z%C*F-JaNdRgUkXp2s5v8y/A?D(G+KbPeShVmYq3t6w
-    jwtExpirationMs: 1440000
+    jwtExpirationMs: 36000000
 
 spring:
   application:
@@ -24,3 +24,4 @@ spring:
     properties:
       hibernate:
         show_sql: true
+    open-in-view: false
