Implementação da documentação com OpenApi Swagger 3

--- a/authuser/src/main/resources/application.yaml
+++ b/authuser/src/main/resources/application.yaml
@@ -25,3 +25,7 @@ spring:
       hibernate:
         show_sql: true
     open-in-view: false
+
+springdoc:
+  swagger-ui:
+    path: /swagger-ui-custom.html
