--- a/storage/src/main/resources/application.yaml
+++ b/storage/src/main/resources/application.yaml
@@ -1,1 +1,27 @@
+server:
+  port: 8084
+  servlet:
+    context-path: '/master-storage/'
 
+master:
+  auth:
+    jwtSecret: B&E)H@McQfTjWnZr4u7w!z%C*F-JaNdRgUkXp2s5v8y/A?D(G+KbPeShVmYq3t6w
+    jwtExpirationMs: 36000000
+
+spring:
+  application:
+    name: master-storage-service
+  datasource:
+    url:  jdbc:postgresql://localhost:5432/master-storage
+    username: postgres
+    password: dev_router
+  jpa:
+    hibernate:
+      ddl-auto: update
+      dialect: org.hibernate.dialect.PostgreSQLDialect
+      jdbc:
+        lob.non-contextual-creation: true
+    properties:
+      hibernate:
+        show_sql: true
+    open-in-view: false
