--- a/accountancy/src/main/resources/application.yaml
+++ b/accountancy/src/main/resources/application.yaml
@@ -28,6 +28,10 @@ spring:
       hibernate:
         show_sql: true
     open-in-view: false
+  flyway:
+    baselineOnMigrate: true
+    locations:
+      classpath: db/migration
 
 eureka:
   client:
