adicionando log de atualizacoes de stock

--- a/authuser/src/main/resources/application.yaml
+++ b/authuser/src/main/resources/application.yaml
@@ -6,7 +6,7 @@ server:
 master:
   auth:
     jwtSecret: B&E)H@McQfTjWnZr4u7w!z%C*F-JaNdRgUkXp2s5v8y/A?D(G+KbPeShVmYq3t6w
-    jwtExpirationMs: 36000000
+    jwtExpirationMs: -1
   api:
     url:
       storage: 'http://master-storage-service'
