Adicionando faturas,programação,fornecedor_factura,Fornecedor_natureza e melhorias nas contas correntes

--- a/authuser/src/main/resources/application.yaml
+++ b/authuser/src/main/resources/application.yaml
@@ -10,6 +10,7 @@ master:
   api:
     url:
       storage: 'http://master-storage-service'
+      accountancy: 'http://master-accountancy-service'
 
 spring:
   application:
